# ProjectFichillsh

./: .gitignore  CMakeLists.txt  README.md  RESOURCES_LICENSE  dynamicFiles.json  server.json  use_clang_format.sh  verify_clang_format.sh
.github/workflows/: check_clang-format.yml  windows_build.yml  windows_deploy.yml
WIPResources/: someSources.txt
client/: ducky.cpp  ducky.hpp  fish.cpp  fish.hpp  game.cpp  game.hpp  main.cpp  player.cpp  player.hpp
resources/audio/: sources.txt
resources/map_1/: map_1.json
resources/sprites/: ducky_1.json  human_1.json  sources.txt
resources/tilesets/: outdoors_1.json  source.txt
server/: main.cpp  player.cpp  player.hpp
share/: network.hpp  player.cpp  player.hpp
